crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__error_path_lower_member.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: "Foo::bar"
---
PathMember(
    1,
    6,
)
