crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__error_tag_name.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: ":Foo"
---
TagName(
    1,
    1,
)
