crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__tag_args.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: ":not_found(id)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Tag {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
            value: "not_found",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: Var(
                    "id",
                ),
            },
        ],
    },
}
